Am tratat input-urile invalide și am remediat bug-urile descoperite la Etapa II