@@ -16,7 +16,7 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.*;
-import java.util.stream.Collectors;
+
 
 public class Main {
 
@@ -130,7 +130,7 @@ public class Main {
             System.out.println("12. Imprumuta publicatie");
             System.out.println("13. Returneaza publicatie");
             System.out.println("14. Rezerva publicatie");
-            System.out.println("15. Reinnoieste imprumut");
+            System.out.println("15. Reinoieste imprumut");
             System.out.println("16. Adauga recenzie");
             System.out.println("17. Afiseaza recenzii");
             System.out.println("18. Listare evenimente");
@@ -158,7 +158,7 @@ public class Main {
                 case "12" -> imprumutaPublicatie();
                 case "13" -> returneazaPublicatie();
                 case "14" -> rezervaPublicatie();
-                case "15" -> reinnoiesteImprumut();
+                case "15" -> reinoiesteImprumut();
                 case "16" -> adaugaRecenzie();
                 case "17" -> afiseazaRecenziiPublicatie();
                 case "18" -> listareEvenimente();
@@ -192,20 +192,19 @@ public class Main {
             System.out.println("9. Sorteaza dupa rating");
             System.out.println("10. Sorteaza dupa nr. de imprumuturi");
             System.out.println("11. Sorteaza dupa titlu");
-            System.out.println("12. Imprumuta publicatie");
-            System.out.println("13. Afiseaza recenziile unui cititor");
-            System.out.println("14. Afiseaza recenziile unei publicatii");
-            System.out.println("15. Listare evenimente");
-            System.out.println("16. Vizualizare imprumuturi active ale unui cititor");
-            System.out.println("17. Vizualizare istoric imprumuturi ale unui cititor");
-            System.out.println("18. Vizualizare amenzi unui cititor");
-            System.out.println("19. Adauga publicatie");
-            System.out.println("20. Sterge publicatie");
-            System.out.println("21. Creeaza eveniment");
-            System.out.println("22. Sterge eveniment");
-            System.out.println("23. Blocheaza utilizator");
-            System.out.println("24. Deblocheaza utilizator");
-            System.out.println("25. Adauga bibliotecar STAFF");
+            System.out.println("12. Afiseaza recenziile unui cititor");
+            System.out.println("13. Afiseaza recenziile unei publicatii");
+            System.out.println("14. Listare evenimente");
+            System.out.println("15. Vizualizare imprumuturi active ale unui cititor");
+            System.out.println("16. Vizualizare istoric imprumuturi ale unui cititor");
+            System.out.println("17. Vizualizare amenzi unui cititor");
+            System.out.println("18. Adauga publicatie");
+            System.out.println("19. Sterge publicatie");
+            System.out.println("20. Creeaza eveniment");
+            System.out.println("21. Sterge eveniment");
+            System.out.println("22. Blocheaza utilizator");
+            System.out.println("23. Deblocheaza utilizator");
+            System.out.println("24. Adauga bibliotecar STAFF");
             System.out.println("0. Logout");
 
             System.out.print("Alege optiunea: ");
@@ -223,20 +222,19 @@ public class Main {
                 case "9" -> sortareDupaRating();
                 case "10" -> sortareDupaNrImprumuturi();
                 case "11" -> sortareDupaTitlu();
-                case "12" -> imprumutaPublicatie();
-                case "13" -> afiseazaRecenziiUtilizator();
-                case "14" -> afiseazaRecenziiPublicatie();
-                case "15" ->  listareEvenimente();
-                case "16" -> imprumuturiActiveCititor();
-                case "17" -> istoricImprumuturiCititor();
-                case "18" -> amenziCititor();
-                case "19" -> adaugaPublicatieBibliotecar();
-                case "20" -> stergePublicatieBibliotecar();
-                case "21" -> creeazaEvenimentBibliotecar();
-                case "22" -> stergeEvenimentBibliotecar();
-                case "23" -> blocheazaUtilizator();
-                case "24" -> deblocheazaUtilizator();
-                case "25" -> adaugaBibliotecarStaff();
+                case "12" -> afiseazaRecenziiUtilizator();
+                case "13" -> afiseazaRecenziiPublicatie();
+                case "14" ->  listareEvenimente();
+                case "15" -> imprumuturiActiveCititor();
+                case "16" -> istoricImprumuturiCititor();
+                case "17" -> amenziCititor();
+                case "18" -> adaugaPublicatieBibliotecar();
+                case "19" -> stergePublicatieBibliotecar();
+                case "20" -> creeazaEvenimentBibliotecar();
+                case "21" -> stergeEvenimentBibliotecar();
+                case "22" -> blocheazaUtilizator();
+                case "23" -> deblocheazaUtilizator();
+                case "24" -> adaugaBibliotecarStaff();
                 case "0" -> {
                     authService.logout();
                     running = false;
@@ -248,119 +246,284 @@ public class Main {
 
     private static void listareToatePublicatii() {
         BibliotecaService svc = BibliotecaService.getInstance();
-        svc.getToatePublicatiile().forEach(System.out::println);
+
+        try {
+            var lista = svc.getToatePublicatiile();
+
+            if (lista.isEmpty()) {
+                throw new EntitateInexistentaExceptie("Publicatii", -1);
+            }
+
+            lista.forEach(System.out::println);
+        }
+        catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Nu exista publicatii in sistem.");
+        }
     }
 
     private static void cautareTitlu() {
         BibliotecaService svc = BibliotecaService.getInstance();
         System.out.print("Introdu titlul: ");
-        String titlu = scanner.nextLine();
-        svc.cautaDupaTitlu(titlu).forEach(System.out::println);
+        String titlu = scanner.nextLine().trim();
+
+        if (titlu.isEmpty()) {
+            System.out.println("Introduceti titlul pe care il cautati.");
+            return;
+        }
+
+        var rezultate = svc.cautaDupaTitlu(titlu);
+        if (rezultate.isEmpty()) {
+            System.out.println("Nu exista nicio publicatie cu titlul \"" + titlu + "\".");
+        } else {
+            rezultate.forEach(System.out::println);
+        }
     }
 
     private static void cautareAutor() {
         BibliotecaService svc = BibliotecaService.getInstance();
         System.out.print("Introdu autorul: ");
-        String autor = scanner.nextLine();
-        svc.cautareComplexa(null, autor, null, null, null, null).forEach(System.out::println);
+        String autor = scanner.nextLine().trim();
+
+        if (autor.isEmpty()) {
+            System.out.println("Introduceti autorul pe care il cautati.");
+            return;
+        }
+
+        var rezultate = svc.cautareComplexa(null, autor, null, null, null, null);
+        if (rezultate.isEmpty()) {
+            System.out.println("Nu exista publicatii scrise de \"" + autor + "\".");
+        } else {
+            rezultate.forEach(System.out::println);
+        }
     }
 
     private static void cautareCategorie() {
         BibliotecaService svc = BibliotecaService.getInstance();
         System.out.print("Introdu categoria: ");
-        String cat = scanner.nextLine();
-        svc.cautaDupaCategorie(cat).forEach(System.out::println);
+        String cat = scanner.nextLine().trim();
+
+        if (cat.isEmpty()) {
+            System.out.println("Introduceti categoria pe care o cautati.");
+            return;
+        }
+
+        var rezultate = svc.cautaDupaCategorie(cat);
+        if (rezultate.isEmpty()) {
+            System.out.println("Nu exista publicatii in categoria \"" + cat + "\".");
+        } else {
+            rezultate.forEach(System.out::println);
+        }
     }
 
     private static void cautareIntervalAni() {
         BibliotecaService svc = BibliotecaService.getInstance();
-        System.out.print("An inceput: ");
-        int start = Integer.parseInt(scanner.nextLine());
-        System.out.print("An sfarsit: ");
-        int end = Integer.parseInt(scanner.nextLine());
-        svc.cautaDupaIntervalAni(start, end).forEach(System.out::println);
-    }
+        try {
+            System.out.print("An inceput: ");
+            int start = Integer.parseInt(scanner.nextLine().trim());
 
+            System.out.print("An sfarsit: ");
+            int end   = Integer.parseInt(scanner.nextLine().trim());
+
+            if (start <= 0 || end <= 0) {
+                System.out.println("Anii trebuie sa fie pozitivi.");
+                return;
+            }
+            if (end < start) {
+                System.out.println("Anul de sfarsit trebuie sa fie mai mare sau egal cu anul de inceput.");
+                return;
+            }
+
+            var rezultate = svc.cautaDupaIntervalAni(start, end);
+            if (rezultate.isEmpty()) {
+                System.out.println("Nu exista publicatii intre anii " + start + " si " + end + ".");
+            } else {
+                rezultate.forEach(System.out::println);
+            }
+        } catch (NumberFormatException ex) {
+            System.out.println("Te rog introdu numere valide pentru ani.");
+        }
+    }
     private static void cautareDisponibilitate() {
         BibliotecaService svc = BibliotecaService.getInstance();
         System.out.print("Disponibil? (true/false): ");
-        boolean disp = Boolean.parseBoolean(scanner.nextLine());
-        svc.cautaDupaDisponibilitate(disp).forEach(System.out::println);
-    }
+        String input = scanner.nextLine().trim().toLowerCase();
 
+        if (!input.equals("true") && !input.equals("false")) {
+            System.out.println("Introdu \"true\" sau \"false\" pentru disponibilitate.");
+            return;
+        }
+
+        boolean disp = Boolean.parseBoolean(input);
+        var rezultate = svc.cautaDupaDisponibilitate(disp);
+
+        if (rezultate.isEmpty()) {
+            System.out.println("Nu exista publicatii cu disponibilitatea solicitata.");
+        } else {
+            rezultate.forEach(System.out::println);
+        }
+    }
     private static void cautareComplexa() {
         BibliotecaService svc = BibliotecaService.getInstance();
+
         System.out.print("Titlu (enter pt gol): ");
-        String t = scanner.nextLine();
+        String titlu = scanner.nextLine().trim();
+        titlu = titlu.isBlank() ? null : titlu;
+
         System.out.print("Autor (enter pt gol): ");
-        String a = scanner.nextLine();
+        String autor = scanner.nextLine().trim();
+        autor = autor.isBlank() ? null : autor;
+
         System.out.print("Categorie (enter pt gol): ");
-        String c = scanner.nextLine();
-        System.out.print("An inceput (0 pt skip): ");
-        int as = Integer.parseInt(scanner.nextLine());
-        Integer anStart = (as == 0 ? null : as);
-        System.out.print("An final (0 pt skip): ");
-        int af = Integer.parseInt(scanner.nextLine());
-        Integer anEnd = (af == 0 ? null : af);
+        String cat = scanner.nextLine().trim();
+        cat = cat.isBlank() ? null : cat;
+
+        Integer anStart, anEnd;
+        try {
+            System.out.print("An inceput (0 pt skip): ");
+            int as = Integer.parseInt(scanner.nextLine().trim());
+            if (as < 0) {
+                System.out.println("Anul trebuie sa fie pozitiv.");
+                return;
+            }
+            anStart = (as == 0 ? null : as);
+
+            System.out.print("An final (0 pt skip): ");
+            int af = Integer.parseInt(scanner.nextLine().trim());
+            if (af < 0) {
+                System.out.println("Anul trebuie sa fie pozitiv.");
+                return;
+            }
+            anEnd = (af == 0 ? null : af);
+
+            if (anStart != null && anEnd != null && anEnd < anStart) {
+                System.out.println("Anul de sfarsit trebuie sa fie mai mare sau egal cu anul de inceput.");
+                return;
+            }
+        } catch (NumberFormatException ex) {
+            System.out.println("Te rog introdu numere intregi pentru ani.");
+            return;
+        }
+
         System.out.print("Criterii sortare (an,rating,nrimprumuturi,titlu): ");
         String critStr = scanner.nextLine();
-        List<String> crit = critStr.isBlank() ? null
-                : Arrays.stream(critStr.split(",")).map(String::trim).collect(Collectors.toList());
-        svc.cautareComplexa(t, a, c, anStart, anEnd, crit).forEach(System.out::println);
+        List<String> crit = null;
+        if (!critStr.isBlank()) {
+            Set<String> allowed = Set.of("an", "rating", "nrimprumuturi", "titlu");
+            crit = Arrays.stream(critStr.split(","))
+                    .map(String::trim)
+                    .filter(allowed::contains)
+                    .toList();
+            if (crit.isEmpty()) {
+                System.out.println("Nu ai introdus criterii valide de sortare. Continuam fara sortare.");
+                crit = null;
+            }
+        }
+
+        var rezultate = svc.cautareComplexa(titlu, autor, cat, anStart, anEnd, crit);
+        if (rezultate.isEmpty()) {
+            System.out.println("Nu au fost gasite publicatii dupa criteriile introduse.");
+        } else {
+            rezultate.forEach(System.out::println);
+        }
     }
+
 
     private static void sortareDupaAn() {
-        BibliotecaService.getInstance().sorteazaDupaAn().forEach(System.out::println);
+        var rez = BibliotecaService.getInstance().sorteazaDupaAn();
+        if (rez.isEmpty()) {
+            System.out.println("Nu exista publicatii pentru a putea fi sortate dupa an.");
+        } else {
+            rez.forEach(System.out::println);
+        }
     }
+
 
     private static void sortareDupaRating() {
-        BibliotecaService.getInstance().sorteazaDupaRating().forEach(System.out::println);
+        var rez = BibliotecaService.getInstance().sorteazaDupaRating();
+        if (rez.isEmpty()) {
+            System.out.println("Nu exista publicatii pentru a putea fi sortate dupa rating.");
+        } else {
+            rez.forEach(System.out::println);
+        }
     }
+
 
     private static void sortareDupaNrImprumuturi() {
-        BibliotecaService.getInstance().sorteazaDupaNrImprumuturi().forEach(System.out::println);
+        var rez = BibliotecaService.getInstance().sorteazaDupaNrImprumuturi();
+        if (rez.isEmpty()) {
+            System.out.println("Nu exista publicatii pentru a putea fi sortate dupa numarul de imprumuturi.");
+        } else {
+            rez.forEach(System.out::println);
+        }
     }
 
+
     private static void sortareDupaTitlu() {
-        BibliotecaService.getInstance().sorteazaDupaTitlu().forEach(System.out::println);
+        var rez = BibliotecaService.getInstance().sorteazaDupaTitlu();
+        if (rez.isEmpty()) {
+            System.out.println("Nu exista publicatii pentru a putea fi sortate dupa titlu.");
+        } else {
+            rez.forEach(System.out::println);
+        }
     }
+
 
     private static void imprumutaPublicatie() {
         AuthService auth = AuthService.getInstance();
         BibliotecaService svc = BibliotecaService.getInstance();
 
         if (!(auth.getUtilizatorCurent() instanceof Cititor cititor)) {
-            System.out.println("Doar cititorii pot imprumuta!");
+            System.out.println("Doar cititorii pot imprumuta.");
             return;
         }
 
         System.out.print("ID publicatie: ");
-        int idPub = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int idPub;
+        try {
+            idPub = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
+
         try {
             svc.imprumutaPublicatie(idPub, cititor.getId());
-            System.out.println("Imprumut realizat!");
+            System.out.println("Imprumut realizat cu succes.");
         } catch (Exception e) {
             System.out.println(e.getMessage());
         }
     }
+
 
     private static void returneazaPublicatie() {
         AuthService auth = AuthService.getInstance();
         BibliotecaService svc = BibliotecaService.getInstance();
 
         if (!(auth.getUtilizatorCurent() instanceof Cititor cititor)) {
-            System.out.println("Doar cititorii pot returna!");
+            System.out.println("Doar cititorii pot returna.");
             return;
         }
 
         System.out.print("ID publicatie: ");
-        int idPub = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int idPub;
+        try {
+            idPub = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
+
         try {
             svc.returneazaPublicatie(idPub, cititor.getId());
-        } catch (Exception e) {
-            throw new RuntimeException(e);
+            System.out.println("Returnare cu succes.");
+        } catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Publicatia cu ID " + idPub +
+                    "este imprumutata de catre tine ca sa o poti returna.");
+        } catch (Exception ex) {
+            System.out.println("Eroare la returnare: " + ex.getMessage());
         }
-        System.out.println("Returnare cu succes!");
     }
 
     private static void rezervaPublicatie() {
@@ -368,38 +531,67 @@ public class Main {
         BibliotecaService svc = BibliotecaService.getInstance();
 
         if (!(auth.getUtilizatorCurent() instanceof Cititor cititor)) {
-            System.out.println("Doar cititorii pot rezerva!");
+            System.out.println("Doar cititorii pot rezerva.");
             return;
         }
 
         System.out.print("ID publicatie: ");
-        int idPub = Integer.parseInt(scanner.nextLine());
-        svc.adaugaRezervare(idPub);
+        String raw = scanner.nextLine().trim();
+        int idPub;
+        try {
+            idPub = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
 
         try {
+
             svc.rezervaPublicatie(idPub, cititor.getId());
-            System.out.println("Rezervare adaugata!");
+            System.out.println("Rezervarea a fost adaugata cu succes.");
         } catch (Exception e) {
+
             System.out.println(e.getMessage());
         }
     }
 
-    private static void reinnoiesteImprumut() {
+
+    private static void reinoiesteImprumut() {
         AuthService auth = AuthService.getInstance();
         BibliotecaService svc = BibliotecaService.getInstance();
 
         if (!(auth.getUtilizatorCurent() instanceof Cititor cititor)) {
-            System.out.println("Doar cititorii pot reinnoi!");
+            System.out.println("Doar cititorii pot reinnoi.");
             return;
         }
 
         System.out.print("ID publicatie: ");
-        int idPub = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int idPub;
+        try {
+            idPub = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
+
         try {
             svc.reinnoiesteImprumut(idPub, cititor.getId());
-            System.out.println("Reinnoire cu succes!");
-        } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Reinnoire cu succes.");
+        }
+        catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Nu exista un imprumut activ pentru publicatia cu ID "
+                    + idPub + " in contul tau.");
+        }
+        catch (ResursaIndisponibilaExceptie ex) {
+            System.out.println("Publicatia cu ID " + idPub
+                    + " este rezervata si nu poate fi reinnoita.");
+        }
+        catch (LimitaDepasitaExceptie ex) {
+            System.out.println("Nu poti reinnoi: " + ex.getMessage());
+        }
+        catch (Exception ex) {
+            System.out.println("Eroare la reinnoire: " + ex.getMessage());
         }
     }
 
@@ -407,17 +599,50 @@ public class Main {
         AuthService auth = AuthService.getInstance();
         BibliotecaService svc = BibliotecaService.getInstance();
 
+
         if (!(auth.getUtilizatorCurent() instanceof Cititor cititor)) {
-            System.out.println("Doar cititorii pot adauga recenzii!");
+            System.out.println("Doar cititorii pot adauga recenzii.");
             return;
         }
 
+
         System.out.print("ID publicatie: ");
-        int idPub = Integer.parseInt(scanner.nextLine());
+        String rawId = scanner.nextLine().trim();
+        int idPub;
+        try {
+            idPub = Integer.parseInt(rawId);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
+
+
+        try {
+            svc.getPublicatieById(idPub);
+        } catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Publicatia cu ID " + idPub + " nu exista.");
+            return;
+        }
+
+
         System.out.print("Rating (1-5): ");
-        int rating = Integer.parseInt(scanner.nextLine());
+        String rawRating = scanner.nextLine().trim();
+        int rating;
+        try {
+            rating = Integer.parseInt(rawRating);
+        } catch (NumberFormatException ex) {
+            System.out.println("Ratingul trebuie sa fie un numar intre 1 si 5.");
+            return;
+        }
+        if (rating < 1 || rating > 5) {
+            System.out.println("Ratingul trebuie sa fie intre 1 si 5.");
+            return;
+        }
+
+
         System.out.print("Comentariu: ");
         String comentariu = scanner.nextLine();
+
 
         try {
             Recenzie rec = new Recenzie(
@@ -427,50 +652,82 @@ public class Main {
                     comentariu,
                     java.time.LocalDateTime.now()
             );
-            svc.adaugaRecenzie(idPub, rec);
-            System.out.println("Recenzie adaugata!");
-        } catch (InputInvalidExceptie | EntitateInexistentaExceptie e) {
-            System.out.println(e.getMessage());
+            try {
+                svc.adaugaRecenzie(idPub, rec);
+            } catch (EntitateInexistentaExceptie e) {
+                throw new RuntimeException(e);
+            }
+            System.out.println("Recenzie adaugata cu succes.");
+        }
+        catch (InputInvalidExceptie ex) {
+            System.out.println(ex.getMessage());
         }
     }
 
+
+
     private static void afiseazaRecenziiPublicatie() {
         BibliotecaService svc = BibliotecaService.getInstance();
+
         System.out.print("ID publicatie: ");
-        int idPub = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int idPub;
+        try {
+            idPub = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
 
         try {
             Publicatie p = svc.getPublicatieById(idPub);
             List<Recenzie> recs = p.getListaRecenzii();
+
             if (recs.isEmpty()) {
-                System.out.println("Nu exista recenzii.");
+                System.out.println("Nu exista recenzii pentru publicatia cu ID " + idPub + ".");
             } else {
                 recs.forEach(System.out::println);
                 System.out.println("Rating mediu: " + svc.calculeazaRatingMediu(idPub));
             }
-        } catch (EntitateInexistentaExceptie e) {
-            System.out.println(e.getMessage());
+        } catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Publicatia cu ID " + idPub + " nu exista.");
         }
     }
 
+
     private static void inscriereEveniment() {
         AuthService auth = AuthService.getInstance();
+
         if (!(auth.getUtilizatorCurent() instanceof Cititor cititor)) {
-            System.out.println("Doar cititorii se pot inscrie!");
+            System.out.println("Doar cititorii se pot inscrie.");
             return;
         }
 
         System.out.print("ID eveniment: ");
-        int idEv = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int idEv;
+        try {
+            idEv = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
 
         try {
             EvenimentService.getInstance().inscrieParticipant(idEv, cititor);
-            System.out.println("Inscris cu succes!");
-        } catch (LimitaDepasitaExceptie |
-                 EntitateInexistentaExceptie e) {
-            System.out.println(e.getMessage());
+            System.out.println("Inscriere realizata cu succes.");
+        }
+        catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Evenimentul cu ID " + idEv + " nu exista.");
+        }
+        catch (LimitaDepasitaExceptie ex) {
+            System.out.println("Nu te poti inscrie: capacitatea maxima a evenimentului a fost atinsa.");
+        }
+        catch (Exception ex) {
+            System.out.println("Eroare la inscriere: " + ex.getMessage());
         }
     }
+
 
     private static void vizualizareImprumuturiActive() {
         AuthService auth = AuthService.getInstance();
@@ -518,6 +775,12 @@ public class Main {
 
 
     private static void adaugaPublicatieBibliotecar() {
+        AuthService auth = AuthService.getInstance();
+        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar)) {
+            System.out.println("Doar bibliotecarii pot adauga publicatii.");
+            return;
+        }
+
         BibliotecaService svc = BibliotecaService.getInstance();
 
         try {
@@ -530,28 +793,42 @@ public class Main {
 
             System.out.print("Titlu: ");
             String titlu = scanner.nextLine().trim();
-            if (titlu.isBlank()) throw new InputInvalidExceptie("titlu", titlu);
+            if (titlu.isBlank()) {
+                System.out.println("Titlul nu poate fi gol.");
+                return;
+            }
 
             System.out.print("An publicare: ");
-            int an = Integer.parseInt(scanner.nextLine().trim());
-            if (an > java.time.Year.now().getValue())
-                throw new InputInvalidExceptie("an publicare", an);
+            int an;
+            try { an = Integer.parseInt(scanner.nextLine().trim()); }
+            catch (NumberFormatException ex) { System.out.println("Anul trebuie sa fie numeric."); return; }
+            int curYear = java.time.Year.now().getValue();
+            if (an <= 0 || an > curYear) {
+                System.out.println("Anul trebuie sa fie pozitiv si cel mult " + curYear + ".");
+                return;
+            }
 
             System.out.print("Nr pagini: ");
-            int nrPag = Integer.parseInt(scanner.nextLine().trim());
-            if (nrPag < 0) throw new InputInvalidExceptie("nr pagini", nrPag);
+            int nrPag;
+            try { nrPag = Integer.parseInt(scanner.nextLine().trim()); }
+            catch (NumberFormatException ex) { System.out.println("Numarul de pagini trebuie sa fie numeric."); return; }
+            if (nrPag < 0) { System.out.println("Numarul de pagini nu poate fi negativ."); return; }
 
             List<String> autori = new ArrayList<>();
-            System.out.print("Autori (virgula): ");
+            System.out.print("Autori (virgula, enter pt none): ");
             String aIn = scanner.nextLine();
             if (!aIn.isBlank())
                 Arrays.stream(aIn.split(",")).map(String::trim).forEach(autori::add);
 
+
             Map<String, Object> extra = new HashMap<>();
-            PublicatieFactory factory = switch (tip) {
+            PublicatieFactory factory;
+
+            switch (tip) {
                 case "1" -> {
                     System.out.print("ISBN: ");
                     extra.put("isbn", scanner.nextLine().trim());
+
 
                     Editura edDefault = new Editura(0, "DefaultEditura", "Romania");
                     int newId = EdituraServiceCrud.getInstance().create(edDefault);
@@ -561,28 +838,34 @@ public class Main {
                     System.out.print("Categorie: ");
                     extra.put("categorie", scanner.nextLine().trim());
 
-                    yield new CarteFactory();
+                    factory = new CarteFactory();
                 }
                 case "2" -> {
                     System.out.print("Frecventa: ");
                     extra.put("frecventa", scanner.nextLine().trim());
 
                     System.out.print("Numar: ");
-                    extra.put("numar", Integer.parseInt(scanner.nextLine().trim()));
+                    int numar;
+                    try { numar = Integer.parseInt(scanner.nextLine().trim()); }
+                    catch (NumberFormatException ex) { System.out.println("Numarul trebuie sa fie numeric."); return; }
+                    extra.put("numar", numar);
 
                     System.out.print("Categorie: ");
                     extra.put("categorie", scanner.nextLine().trim());
 
-                    yield new RevistaFactory();
+                    factory = new RevistaFactory();
                 }
                 case "3" -> {
                     System.out.print("Durata (min): ");
-                    extra.put("durata", Integer.parseInt(scanner.nextLine().trim()));
+                    int durata;
+                    try { durata = Integer.parseInt(scanner.nextLine().trim()); }
+                    catch (NumberFormatException ex) { System.out.println("Durata trebuie sa fie numerica."); return; }
+                    extra.put("durata", durata);
 
                     System.out.print("Format: ");
                     extra.put("format", scanner.nextLine().trim());
 
-                    System.out.print("Naratori (virgula): ");
+                    System.out.print("Naratori (virgula, enter pt none): ");
                     List<String> nar = new ArrayList<>();
                     String nIn = scanner.nextLine();
                     if (!nIn.isBlank())
@@ -592,36 +875,55 @@ public class Main {
                     System.out.print("Categorie: ");
                     extra.put("categorie", scanner.nextLine().trim());
 
-                    yield new AudiobookFactory();
+                    factory = new AudiobookFactory();
                 }
-                default -> throw new InputInvalidExceptie("tip publicatie", tip);
-            };
+                default -> {
+                    System.out.println("Tip invalid. Alege 1, 2 sau 3.");
+                    return;
+                }
+            }
+
             PublicatieDTO dto = new PublicatieDTO(titlu, an, nrPag, autori, extra);
             Publicatie p = factory.create(dto);
-
             svc.adaugaPublicatie(p);
-            System.out.println("Publicatie adaugata cu ID " + p.getId());
 
-        } catch (NumberFormatException e) {
-            System.out.println("Introdu valori numerice valide!");
-        } catch (InputInvalidExceptie e) {
-            System.out.println(e.getMessage());
+            System.out.println("Publicatie adaugata cu ID " + p.getId());
+        }
+        catch (Exception ex) {
+            System.out.println("Eroare la adaugare: " + ex.getMessage());
         }
     }
-
     private static void stergePublicatieBibliotecar() {
+        AuthService auth = AuthService.getInstance();
+
+        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar)) {
+            System.out.println("Doar bibliotecarii pot sterge publicatii.");
+            return;
+        }
+
         BibliotecaService svc = BibliotecaService.getInstance();
+
         System.out.print("ID publicatie: ");
-        int id = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int id;
+        try {
+            id = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
+            return;
+        }
 
         try {
             svc.getPublicatieById(id);
             svc.stergePublicatie(id);
-            System.out.println("Publicatie stearsa.");
-        } catch (EntitateInexistentaExceptie e) {
-            System.out.println(e.getMessage());
+            System.out.println("Publicatia cu ID " + id + " a fost stearsa.");
+        } catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Publicatia cu ID " + id + " nu exista.");
+        } catch (Exception ex) {
+            System.out.println("Eroare la stergere: " + ex.getMessage());
         }
     }
+
 
     private static void creeazaEvenimentBibliotecar() {
         AuthService auth = AuthService.getInstance();
@@ -677,24 +979,40 @@ public class Main {
             System.out.println(ex.getMessage());
         }
     }
-
     private static void stergeEvenimentBibliotecar() {
         AuthService auth = AuthService.getInstance();
-        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar b) || b.getRol() != RolBibliotecar.ADMIN) {
-            System.out.println("Acces interzis!");
+
+        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar bib) ||
+                bib.getRol() != RolBibliotecar.ADMIN) {
+            System.out.println("Nu ai permisiunea de a sterge evenimente.");
+            return;
+        }
+        System.out.print("ID eveniment: ");
+        String raw = scanner.nextLine().trim();
+        int id;
+        try {
+            id = Integer.parseInt(raw);
+        } catch (NumberFormatException ex) {
+            System.out.println("Introdu un ID numeric valid.");
             return;
         }
 
-        System.out.print("ID eveniment: ");
-        int id = Integer.parseInt(scanner.nextLine());
-
         try {
             EvenimentService.getInstance().stergeEveniment(id);
-            System.out.println("Eveniment sters.");
-        } catch (AccesInterzisExceptie | EntitateInexistentaExceptie e) {
-            System.out.println(e.getMessage());
+            System.out.println("Evenimentul cu ID " + id + " a fost sters.");
+        }
+        catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Evenimentul cu ID " + id + " nu exista.");
+        }
+        catch (AccesInterzisExceptie ex) {
+            System.out.println("Nu ai dreptul sa stergi acest eveniment.");
+        }
+        catch (Exception ex) {
+            System.out.println("Eroare la stergere: " + ex.getMessage());
         }
     }
+
+
 
     private static void listareEvenimente() {
         var evs = EvenimentService.getInstance().listareEvenimente();
@@ -706,39 +1024,82 @@ public class Main {
     }
 
     private static void blocheazaUtilizator() {
+        AuthService auth = AuthService.getInstance();
+
+        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar bib) ||
+                bib.getRol() != RolBibliotecar.ADMIN) {
+            System.out.println("Doar un bibliotecar ADMIN poate bloca utilizatori.");
+            return;
+        }
+
         System.out.print("ID persoana: ");
-        int id = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int id;
+        try { id = Integer.parseInt(raw); }
+        catch (NumberFormatException ex) { System.out.println("Introdu un ID numeric valid."); return; }
+
         try {
             BibliotecaService.getInstance().blocheazaUtilizator(id);
-            System.out.println("Utilizator blocat.");
-        } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Utilizatorul cu ID " + id + " a fost blocat.");
+        } catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Persoana cu ID " + id + " nu exista.");
+        } catch (Exception ex) {
+            System.out.println("Eroare la blocare: " + ex.getMessage());
         }
     }
-
     private static void deblocheazaUtilizator() {
+        AuthService auth = AuthService.getInstance();
+
+        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar bib) ||
+                bib.getRol() != RolBibliotecar.ADMIN) {
+            System.out.println("Doar un bibliotecar ADMIN poate debloca utilizatori.");
+            return;
+        }
+
         System.out.print("ID persoana: ");
-        int id = Integer.parseInt(scanner.nextLine());
+        String raw = scanner.nextLine().trim();
+        int id;
+        try { id = Integer.parseInt(raw); }
+        catch (NumberFormatException ex) { System.out.println("Introdu un ID numeric valid."); return; }
+
         try {
             BibliotecaService.getInstance().deblocheazaUtilizator(id);
-            System.out.println("Utilizator deblocat.");
-        } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Utilizatorul cu ID " + id + " a fost deblocat.");
+        } catch (EntitateInexistentaExceptie ex) {
+            System.out.println("Persoana cu ID " + id + " nu exista.");
+        } catch (Exception ex) {
+            System.out.println("Eroare la deblocare: " + ex.getMessage());
         }
     }
 
     private static void adaugaBibliotecarStaff() {
+        AuthService auth = AuthService.getInstance();
+
+        if (!(auth.getUtilizatorCurent() instanceof Bibliotecar bib) ||
+                bib.getRol() != RolBibliotecar.ADMIN) {
+            System.out.println("Doar un bibliotecar ADMIN poate adauga personal STAFF.");
+            return;
+        }
+
         try {
             System.out.print("Nume: ");
-            String nume = scanner.nextLine();
+            String nume = scanner.nextLine().trim();
+            if (nume.isBlank()) { System.out.println("Numele nu poate fi gol."); return; }
+
             System.out.print("Prenume: ");
-            String pren = scanner.nextLine();
+            String pren = scanner.nextLine().trim();
+
             System.out.print("Email: ");
-            String email = scanner.nextLine();
+            String email = scanner.nextLine().trim();
+            if (email.isBlank()) { System.out.println("Emailul nu poate fi gol."); return; }
+
             System.out.print("Telefon: ");
-            String tel = scanner.nextLine();
+            String tel = scanner.nextLine().trim();
+
             System.out.print("Username: ");
-            String user = scanner.nextLine();
+            String user = scanner.nextLine().trim();
+            if (user.isBlank()) { System.out.println("Username-ul nu poate fi gol."); return; }
+
             System.out.print("Parola: ");
             String passHashed = ParolaUtil.hash(scanner.nextLine());
 
@@ -754,11 +1115,13 @@ public class Main {
                     .build();
 
             BibliotecaService.getInstance().adaugaBibliotecarStaff(b);
-            System.out.println("Bibliotecar STAFF adaugat, ID " + b.getId());
-        } catch (Exception e) {
-            System.out.println(e.getMessage());
+            System.out.println("Bibliotecar STAFF adaugat cu ID " + b.getId());
+        }
+        catch (Exception ex) {
+            System.out.println("Eroare la adaugare: " + ex.getMessage());
         }
     }
+
 
     private static void afiseazaRecenziiUtilizator() {
         BibliotecaService svc = BibliotecaService.getInstance();
